Correct SvnLogXmlParserTest